# JoyShockMapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
JoyShockMapper/: CMakeLists.txt
JoyShockMapper/include/: AutoConnect.h  AutoLoad.h  CmdRegistry.h  ColorCodes.h  DigitalButton.h  Gamepad.h  InputHelpers.h  JSMAssignment.hpp  JSMVariable.hpp  JoyShock.h  JoyShockMapper.h  JslWrapper.h  Mapping.h  PlatformDefinitions.h  SettingsManager.h  Stick.h  TriggerEffectGenerator.h
JoyShockMapper/include/dimgui/: Application.h  InputSelector.h
JoyShockMapper/mod/: TriggerEffectGenerator.ixx
JoyShockMapper/src/: AutoConnect.cpp  AutoLoad.cpp  ButtonHelp.cpp  CmdRegistry.cpp  DigitalButton.cpp  JoyShock.cpp  JslWrapper.cpp  Mapping.cpp  MotionImpl.cpp  SDL2Wrapper.cpp  SDLWrapper.cpp  SettingsManager.cpp  Stick.cpp  TriggerEffectGenerator.cpp  main.cpp  operators.cpp
JoyShockMapper/src/dimgui/: Application.cpp  InputSelector.cpp
JoyShockMapper/src/linux/: Gamepad.cpp  InputHelpers.cpp  PlatformDefinitions.cpp
JoyShockMapper/src/win32/: Gamepad.cpp  HidHideWhitelister.cpp  InputHelpers.cpp  PlatformDefinitions.cpp
cmake/: WindowsConfig.cmake
script/: create_windows_release_archives.bat  generate_win64_vs_solution_SDL.bat  make_clean.bat
script/scripts-for-localization/: 1.extract-lines.py  2.sync-spaces-in-lines.py  3.translation.py  README-en.txt  README-ru.txt  translation-en.txt  translation-ru.txt
